--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,35 @@
+/*  From Building-Blocks    */
+html, body {
+    margin: 0;
+    padding: 0;
+    font-size: 10px; 
+    background-color: #fff;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+section[role="region"] {
+    height: 100%;
+    line-height: 1em;
+    font-size: 2.2rem;
+    transform: translateX(0);
+}
+
+div[role="main"] {
+    background: #fff;
+    height: calc(100% - 5rem);
+    overflow: hidden;
+}
+
+div[role="main"] p {
+    margin: 2rem 2.5rem;
+}
+
+/*  Custom CSS  */
+#index {
+    height: 100%;
+}
+
 .text-center {
     text-align: center;
 }
