--- a/templates/region-province.html
+++ b/templates/region-province.html
@@ -1,3 +1,3 @@
-<a href="#region/<%= coddpto %>/province<%= codprov %>">
+<a href="#region/<%= coddpto %>/province/<%= codprov %>">
     <p><%= nombre %></p>
 </a>
