--- a/templates/museum-cost.html
+++ b/templates/museum-cost.html
@@ -1,4 +1,4 @@
-<a id="cost" href="#cost" role="tab" aria-controls="cost-panel">Cost</a>
+<a id="cost" href="#cost" role="tab" aria-controls="cost-panel">Costos</a>
 <div id="cost-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="cost">
     <section class="gaia-list">
         <article>
