--- a/templates/museum-info.html
+++ b/templates/museum-info.html
@@ -1,4 +1,6 @@
-<a id="info" href="#info" role="tab" aria-controls="info-panel">Información</a>
+<a id="info" href="#info" role="tab" aria-controls="info-panel">
+    <aside class="gaia-icon icon-media-info"></aside>
+</a>
 <div id="info-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="info">
     <section class="gaia-list fit scroll">
         <% if (collection.length > 0) { %>
