--- a/templates/museum-location.html
+++ b/templates/museum-location.html
@@ -1,4 +1,6 @@
-<a id="location" href="#location" role="tab" aria-controls="location-panel">Ubicación</a>
+<a id="location" href="#location" role="tab" aria-controls="location-panel">
+    <aside class="gaia-icon icon-contact-location"></aside>
+</a>
 <div id="location-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="location">
     <% if (address) { %>
         <section class="gaia-list">
