Show museum description in museum info view

--- a/templates/museum-info.html
+++ b/templates/museum-info.html
@@ -23,6 +23,11 @@
                         <strong><%= name %></strong>
                     </p>
                 </li>
+                <% if (description) { %>
+                    <li>
+                        <p><%= description %></p>
+                    </li>
+                <% } %>
             </ul>
         </article>
 
