Fix museum info view without collection

--- a/templates/museum-info.html
+++ b/templates/museum-info.html
@@ -3,7 +3,7 @@
 </a>
 <div id="info-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="info">
     <section class="gaia-list fit scroll">
-        <% if (collection.length > 0) { %>
+        <% if (collection && collection.length > 0) { %>
             <article>
                 <ul>
                     <li class="vbox">
