Set title to museum costs page

--- a/templates/museum-cost.html
+++ b/templates/museum-cost.html
@@ -4,6 +4,7 @@
 <div id="cost-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="cost">
     <section class="gaia-list">
         <article>
+            <header>Costos</header>
             <ul>
                 <% if (tariff.length > 0) { %>
                     <% _.each(tariff, function(item) { %>
