Improve museum contact view

--- a/templates/museum-contact.html
+++ b/templates/museum-contact.html
@@ -2,29 +2,34 @@
     <aside class="gaia-icon icon-settings-homescreen"></aside>
 </a>
 <div id="location-panel" class="bb-tabpanel" role="tabpanel" aria-labelledby="location">
+    <section class="gaia-list">
+        <article>
+            <% if (schedule.length > 0) { %>
+                <header>Horarios</header>
+                <ul>
+                    <% _.each(schedule, function(item) { %>
+                        <li>
+                            <p><%= item %></p>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } %>
+        </article>
+
+        <article>
+            <% if (phones.length > 0) { %>
+                <header>Teléfono</header>
+                <ul>
+                    <% _.each(phones, function(phone) { %>
+                        <li>
+                            <p><%= phone %></p>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } %>
+        </article>
+    </section>
     <section data-type="list">
-        <% if (schedule.length > 0) { %>
-            <header>Horarios</header>
-            <ul>
-                <% _.each(schedule, function(item) { %>
-                    <li>
-                        <p><%= item %></p>
-                    </li>
-                <% }) %>
-            </ul>
-        <% } %>
-
-        <% if (phones.length > 0) { %>
-            <header>Teléfono</header>
-            <ul>
-                <% _.each(phones, function(phone) { %>
-                    <li>
-                        <p><%= phone %></p>
-                    </li>
-                <% }) %>
-            </ul>
-        <% } %>
-
         <% if (emails.length > 0) { %>
             <header>Correo electrónico</header>
             <ul>
